Update Tarea 1 - Módulo 3.ipynb

--- a/Tarea 1 - Módulo 3.ipynb
+++ b/Tarea 1 - Módulo 3.ipynb
@@ -1,8 +1,30 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Tarea 1 - Módulo 3: PROGRAMA DE ESPECIALIZACIÓN EN PROGRAMACIÓN PYTHON 2023-I**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con los datos presentados en el archivo Metales.xlsx (el cual presenta la cantidad extraída de ciertos metales por año en el Perú), responda las siguientes preguntas:\n",
+    "\n",
+    "* ¿Cuál es el promedio de oro extraído entre los años 2000-2022?\n",
+    "* ¿Cuánto es la cantidad máxima de plata extraída en un año y en qué año ocurrió?\n",
+    "* ¿Cuánto es la cantidad mínima de cobre extraída en un año y en qué año ocurrió?\n",
+    "* ¿Cuánto es la cantidad total de cobre extraído entre los años 2000-2022?\n",
+    "* ¿Cuál es el promedio de oro extraído entre los años 2010-2022?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +135,7 @@
        "4  306210.777938  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +247,7 @@
        "22  255442.997159  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -261,6 +283,284 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ¿Cuál es el promedio de oro extraído entre los años 2000-2022?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['AÑO', 'COBRE(TMF)', 'ORO(KG)', 'ZINC(TMF)', 'PLATA(KG)', 'PLOMO(TMF)'], dtype='object')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el promedio de oro extraído entre los años 2000-2022 es 148425.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_filtrar=df[(df['AÑO']>=2000) & (df['AÑO']<=2022)]\n",
+    "prom_oro=df_filtrar['ORO(KG)'].mean()\n",
+    "prom_oro\n",
+    "print(f\"el promedio de oro extraído entre los años 2000-2022 es {prom_oro.round(2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el promedio de oro extraído entre los años 2000-2022 es 148425.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "promedio_oro=df['ORO(KG)'].mean()\n",
+    "promedio_oro\n",
+    "print(f\"el promedio de oro extraído entre los años 2000-2022 es {promedio_oro.round(2)}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ¿Cuánto es la cantidad máxima de plata extraída en un año y en qué año ocurrió?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4329179.762906653"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_plata=df['PLATA(KG)'].max()\n",
+    "max_plata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2016"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "año_max_plata=df.loc[df['PLATA(KG)']== max_plata,'AÑO'].iloc[0]\n",
+    "año_max_plata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La cantidad máxima de plata extraída fue de 4329179.7629 kg en el año 2016\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"La cantidad máxima de plata extraída fue de {max_plata.round(4)} kg en el año {año_max_plata.round(4)}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ¿Cuánto es la cantidad mínima de cobre extraída en un año y en qué año ocurrió?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "553924.0"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min_cobre=df['COBRE(TMF)'].min()\n",
+    "min_cobre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2000"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "año_min_cobre=df.loc[df['COBRE(TMF)']== min_cobre,'AÑO'].iloc[0]\n",
+    "año_min_cobre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La cantidad minima de cobre extraída fue de 553924.0 kg en el año 2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"La cantidad minima de cobre extraída fue de {min_cobre.round(2)} kg en el año {año_min_cobre}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ¿Cuánto es la cantidad total de cobre extraído entre los años 2000-2022?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34581879.337"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_filtrar=df[(df['AÑO']>=2000) & (df['AÑO']<=2022)]\n",
+    "sum_cobre=df_filtrar['COBRE(TMF)'].sum()\n",
+    "sum_cobre.round(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la cantidad  de total de cobre extraído entre los años 2000-2022 es 34581879.337\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['COBRE(TMF)'].sum().round(4)\n",
+    "print(f\"la cantidad  de total de cobre extraído entre los años 2000-2022 es {sum_cobre.round(4)}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ¿Cuál es el promedio de oro extraído entre los años 2010-2022?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El promedio de oro extraido entre los años 2010-2022 es 148425.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_filtrar=df[(df['AÑO']>=2010) & (df['AÑO']<=2022)]\n",
+    "promedio_oro_oro=df_filtrar['ORO(KG)'].sum()\n",
+    "promedio_oro.round(4)\n",
+    "\n",
+    "print(f\"El promedio de oro extraido entre los años 2010-2022 es {promedio_oro.round(2)}\")"
    ]
   }
  ],
