Update Tarea 1 - Módulo 3.ipynb

--- a/Tarea 1 - Módulo 3.ipynb
+++ b/Tarea 1 - Módulo 3.ipynb
@@ -23,6 +23,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Enlace de Github **https://github.com/Saul-Ochoa/Python-UTEC/blob/main/Tarea%201%20-%20M%C3%B3dulo%203.ipynb**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
