--- a/TAREA_2_Modulo_3_ipynb.ipynb
+++ b/TAREA_2_Modulo_3_ipynb.ipynb
@@ -1,54 +1,45 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPTGkGxbWnBDeIAcR8/dw1q",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Saul-Ochoa/Python-UTEC/blob/main/TAREA_2_Modulo_3_ipynb.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "id": "loXRodjEUvv3"
+      },
       "source": [
         "# Tarea 2\n",
         "Autor Saúl Kevin Ochoa Salazar\n",
         "\n",
         "* En ambas preguntas puede generar 10 escenarios posibles y comentar sus resultados."
-      ],
-      "metadata": {
-        "id": "loXRodjEUvv3"
-      }
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "## Preguna 1"
-      ],
       "metadata": {
         "id": "zpbkw2DKVIUi"
-      }
+      },
+      "source": [
+        "## Preguna 1"
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "id": "NjsjUW5gUyQU"
+      },
       "source": [
         "**OCURRENCIAS (VARIABLE DISCRETA – POISSON)**\n",
         "\n",
@@ -57,47 +48,11 @@
         "1. ¿Cuántas personas llegaran a lo largo de cuatro horas?\n",
         "\n",
         "2. ¿Si el máximo de personas que puede atender en un día en el banco es de 570 personas, cuantas horas habrán pasado hasta llegar a su límite?\n"
-      ],
-      "metadata": {
-        "id": "NjsjUW5gUyQU"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import random\n",
-        "import math\n",
-        "import numpy as np\n",
-        "\n",
-        "tasa_llegada=50  #numero de cliente es de 50 por hora\n",
-        "semilla=10\n",
-        "def escenario_1(tasa_llegada,tiempo):\n",
-        "  cliente_totales=0\n",
-        "  horas=0\n",
-        "  while cliente_totales<=tiempo:\n",
-        "    horas+=1\n",
-        "    clientes=np.random.poisson(tasa_llegada)\n",
-        "    cliente_totales += clientes\n",
-        "    if cliente_totales>=tiempo:\n",
-        "      break #se termina la simulacion\n",
-        "  return horas\n",
-        "\n",
-        "tiempo_cuarto=4*60 # tiempo en minutos\n",
-        "print(\"Pregunta 1 : ¿Cuántas personas llegaran a lo largo de cuatro horas? \")\n",
-        "\n",
-        "print(\"\\nGenerdor de Escenarios\")\n",
-        "print(\"\")\n",
-        "for i in range(semilla):\n",
-        "  horas=escenario_1(tasa_llegada,tiempo_cuarto)\n",
-        "  print(f\"Escenario {i+1} : {horas} horas\")\n",
-        "\n",
-        "print(\"\\nPregunta 2 : ¿Si el máximo de personas que puede atender en un día en el banco es de 570 personas, cuantas horas habrán pasado hasta llegar a su límite?\")\n",
-        "print(\"\\nAnalisis de los resultados:\")\n",
-        "tiempo_limite=570\n",
-        "horas_limite = escenario_1(tasa_llegada, tiempo_limite)\n",
-        "\n",
-        "print(f\"Horas para llegar al límite de {tiempo_limite} personas: {horas_limite} horas\")\n"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -105,46 +60,80 @@
         "id": "weOq4sV3VwcV",
         "outputId": "021798ca-2a1a-4419-e828-ec3dab81da3e"
       },
-      "execution_count": 18,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Pregunta 1 : ¿Cuántas personas llegaran a lo largo de cuatro horas? \n",
+            "1. Número de personas llegadas en 4 horas: 213\n",
+            "2. Horas para llegar al límite de personas atendidas: 11\n",
             "\n",
-            "Generdor de Escenarios\n",
-            "\n",
-            "Escenario 1 : 5 horas\n",
-            "Escenario 2 : 5 horas\n",
-            "Escenario 3 : 6 horas\n",
-            "Escenario 4 : 5 horas\n",
-            "Escenario 5 : 5 horas\n",
-            "Escenario 6 : 5 horas\n",
-            "Escenario 7 : 5 horas\n",
-            "Escenario 8 : 6 horas\n",
-            "Escenario 9 : 5 horas\n",
-            "Escenario 10 : 5 horas\n",
-            "\n",
-            "Pregunta 2 : ¿Si el máximo de personas que puede atender en un día en el banco es de 570 personas, cuantas horas habrán pasado hasta llegar a su límite?\n",
-            "\n",
-            "Analisis de los resultados:\n",
-            "Horas para llegar al límite de 570 personas: 11 horas\n"
+            "10 Escenarios posibles:\n",
+            "Escenario 1: Número de personas en 4 horas: 215\n",
+            "Escenario 2: Número de personas en 4 horas: 184\n",
+            "Escenario 3: Número de personas en 4 horas: 218\n",
+            "Escenario 4: Número de personas en 4 horas: 208\n",
+            "Escenario 5: Número de personas en 4 horas: 199\n",
+            "Escenario 6: Número de personas en 4 horas: 219\n",
+            "Escenario 7: Número de personas en 4 horas: 190\n",
+            "Escenario 8: Número de personas en 4 horas: 216\n",
+            "Escenario 9: Número de personas en 4 horas: 211\n",
+            "Escenario 10: Número de personas en 4 horas: 206\n"
           ]
         }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def generar_escenarios_poisson(lam, n):\n",
+        "    escenarios = []\n",
+        "    for _ in range(n):\n",
+        "        num_personas = np.random.poisson(lam, size=4).sum()\n",
+        "        escenarios.append(num_personas)\n",
+        "    return escenarios\n",
+        "\n",
+        "def horas_para_limite(lam, limite):\n",
+        "    horas = 0\n",
+        "    num_personas = 0\n",
+        "    while num_personas <= limite:\n",
+        "        num_personas += np.random.poisson(lam)\n",
+        "        horas += 1\n",
+        "    return horas\n",
+        "\n",
+        "# Escenario 1: Número de personas llegadas en 4 horas\n",
+        "lam = 50  # Promedio de clientes por hora\n",
+        "num_personas_4_horas = np.random.poisson(lam, size=4).sum()\n",
+        "print(\"1. Número de personas llegadas en 4 horas:\", num_personas_4_horas)\n",
+        "\n",
+        "# Escenario 2: Horas para llegar al límite de personas atendidas\n",
+        "limite_personas = 570\n",
+        "horas_limite = horas_para_limite(lam, limite_personas)\n",
+        "print(\"2. Horas para llegar al límite de personas atendidas:\", horas_limite)\n",
+        "\n",
+        "# Generar 10 escenarios posibles\n",
+        "escenarios = generar_escenarios_poisson(lam, 10)\n",
+        "print(\"\\n10 Escenarios posibles:\")\n",
+        "for i, escenario in enumerate(escenarios):\n",
+        "    print(f\"Escenario {i+1}: Número de personas en 4 horas:\", escenario)\n",
+        "\n"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "## Pregunta 2"
-      ],
       "metadata": {
         "id": "Ga4q3Dpfop_s"
-      }
+      },
+      "source": [
+        "## Pregunta 2"
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "id": "VnIhwaKgo2fp"
+      },
       "source": [
         "**TIEMPO DE ESPERA (VARIABLE CONTINUAS - UNIFORME)**\n",
         "\n",
@@ -152,13 +141,56 @@
         "\n",
         "1. ¿Si el banco dispone de 8 ventanillas de atención, puede atender a 600 personas en ocho horas?\n",
         "2. Si al capacitar al personal, el tiempo de atención en minutos mejora y ahora es una variable continua uniforme de extremos 4 y 8, ¿se logra atender a las 600 personas con las 8 ventanillas de atención?"
-      ],
-      "metadata": {
-        "id": "VnIhwaKgo2fp"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TrpTqK68BKiB",
+        "outputId": "5a39834d-359c-426c-a0d9-2751ef1283fe"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Pregunta 1: ¿Si el banco dispone de 8 ventanillas de atención, puede atender a 600 personas en ocho horas?\n",
+            "Escenario 1: Se atendieron 416 personas en 8 horas\n",
+            "Escenario 2: Se atendieron 408 personas en 8 horas\n",
+            "Escenario 3: Se atendieron 408 personas en 8 horas\n",
+            "Escenario 4: Se atendieron 408 personas en 8 horas\n",
+            "Escenario 5: Se atendieron 408 personas en 8 horas\n",
+            "Escenario 6: Se atendieron 408 personas en 8 horas\n",
+            "Escenario 7: Se atendieron 408 personas en 8 horas\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Escenario 8: Se atendieron 408 personas en 8 horas\n",
+            "Escenario 9: Se atendieron 416 personas en 8 horas\n",
+            "Escenario 10: Se atendieron 408 personas en 8 horas\n",
+            "\n",
+            "Pregunta2 :Si al capacitar al personal, el tiempo de atención en minutos mejora y ahora es una variable continua uniforme de extremos 4 y 8\n",
+            "¿Se logra atender a las 600 personas con las 8 ventanillas de atención?\n",
+            "Escenario 1: Se atendieron 512 personas en 8 horas\n",
+            "Escenario 2: Se atendieron 512 personas en 8 horas\n",
+            "Escenario 3: Se atendieron 512 personas en 8 horas\n",
+            "Escenario 4: Se atendieron 520 personas en 8 horas\n",
+            "Escenario 5: Se atendieron 512 personas en 8 horas\n",
+            "Escenario 6: Se atendieron 512 personas en 8 horas\n",
+            "Escenario 7: Se atendieron 512 personas en 8 horas\n",
+            "Escenario 8: Se atendieron 512 personas en 8 horas\n",
+            "Escenario 9: Se atendieron 504 personas en 8 horas\n",
+            "Escenario 10: Se atendieron 512 personas en 8 horas\n"
+          ]
+        }
+      ],
       "source": [
         "import random\n",
         "\n",
@@ -195,56 +227,42 @@
         "  personas_atendidas=generar_escenarios(ventanillas,tiempo_ocho_horas,extremo_inferior_2,extremo_superior_2,escenarios)\n",
         "  resultado=f\"Escenario {i+1}: Se atendieron {personas_atendidas[i]} personas en 8 horas\"\n",
         "  print(resultado)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "TrpTqK68BKiB",
-        "outputId": "5a39834d-359c-426c-a0d9-2751ef1283fe"
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Pregunta 1: ¿Si el banco dispone de 8 ventanillas de atención, puede atender a 600 personas en ocho horas?\n",
-            "Escenario 1: Se atendieron 408 personas en 8 horas\n",
-            "Escenario 2: Se atendieron 408 personas en 8 horas\n",
-            "Escenario 3: Se atendieron 408 personas en 8 horas\n",
-            "Escenario 4: Se atendieron 408 personas en 8 horas\n",
-            "Escenario 5: Se atendieron 408 personas en 8 horas\n",
-            "Escenario 6: Se atendieron 408 personas en 8 horas\n",
-            "Escenario 7: Se atendieron 408 personas en 8 horas\n",
-            "Escenario 8: Se atendieron 408 personas en 8 horas\n",
-            "Escenario 9: Se atendieron 408 personas en 8 horas\n",
-            "Escenario 10: Se atendieron 408 personas en 8 horas\n",
-            "\n",
-            "Pregunta2 :Si al capacitar al personal, el tiempo de atención en minutos mejora y ahora es una variable continua uniforme de extremos 4 y 8\n",
-            "¿Se logra atender a las 600 personas con las 8 ventanillas de atención?\n",
-            "Escenario 1: Se atendieron 504 personas en 8 horas\n",
-            "Escenario 2: Se atendieron 512 personas en 8 horas\n",
-            "Escenario 3: Se atendieron 512 personas en 8 horas\n",
-            "Escenario 4: Se atendieron 512 personas en 8 horas\n",
-            "Escenario 5: Se atendieron 512 personas en 8 horas\n",
-            "Escenario 6: Se atendieron 512 personas en 8 horas\n",
-            "Escenario 7: Se atendieron 512 personas en 8 horas\n",
-            "Escenario 8: Se atendieron 512 personas en 8 horas\n",
-            "Escenario 9: Se atendieron 512 personas en 8 horas\n",
-            "Escenario 10: Se atendieron 512 personas en 8 horas\n"
-          ]
-        }
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "En ninguno de los 2 casos logra atender a 600 personas en 8 horas."
-      ],
       "metadata": {
         "id": "Y6ehQpQ3DM88"
-      }
+      },
+      "source": [
+        "**En ninguno de los 2 casos logra atender a 600 personas en 8 horas.**"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyPTGkGxbWnBDeIAcR8/dw1q",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.2"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
