--- a/TAREA_2_Modulo_3_ipynb.ipynb
+++ b/TAREA_2_Modulo_3_ipynb.ipynb
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -65,57 +65,68 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "1. Número de personas llegadas en 4 horas: 201\n",
-            "2. Horas para llegar al límite de personas atendidas: 12\n",
+            "Pregunta 1 : ¿Cuántas personas llegaran a lo largo de cuatro horas?\n",
             "\n",
             "10 Escenarios posibles:\n",
-            "Escenario 1: Número de personas en 4 horas: 192\n",
-            "Escenario 2: Número de personas en 4 horas: 196\n",
-            "Escenario 3: Número de personas en 4 horas: 169\n",
-            "Escenario 4: Número de personas en 4 horas: 203\n",
-            "Escenario 5: Número de personas en 4 horas: 201\n",
-            "Escenario 6: Número de personas en 4 horas: 209\n",
-            "Escenario 7: Número de personas en 4 horas: 200\n",
-            "Escenario 8: Número de personas en 4 horas: 199\n",
-            "Escenario 9: Número de personas en 4 horas: 197\n",
-            "Escenario 10: Número de personas en 4 horas: 209\n"
+            "Escenario 1 : Numero de personas llegadas en 4 horas es 202\n",
+            "Escenario 2 : Numero de personas llegadas en 4 horas es 178\n",
+            "Escenario 3 : Numero de personas llegadas en 4 horas es 201\n",
+            "Escenario 4 : Numero de personas llegadas en 4 horas es 189\n",
+            "Escenario 5 : Numero de personas llegadas en 4 horas es 176\n",
+            "Escenario 6 : Numero de personas llegadas en 4 horas es 206\n",
+            "Escenario 7 : Numero de personas llegadas en 4 horas es 204\n",
+            "Escenario 8 : Numero de personas llegadas en 4 horas es 190\n",
+            "Escenario 9 : Numero de personas llegadas en 4 horas es 208\n",
+            "Escenario 10 : Numero de personas llegadas en 4 horas es 205\n",
+            "\n",
+            "Pregunta 2: ¿Si el máximo de personas que puede atender en un día en el banco es de 570 personas\n",
+            "cuantas horas habrán pasado hasta llegar a su límite?\n",
+            "Escenario 1: Horas para llegar al límite de personas atendidas: 13 \n",
+            "Escenario 2: Horas para llegar al límite de personas atendidas: 12 \n",
+            "Escenario 3: Horas para llegar al límite de personas atendidas: 12 \n",
+            "Escenario 4: Horas para llegar al límite de personas atendidas: 12 \n",
+            "Escenario 5: Horas para llegar al límite de personas atendidas: 12 \n",
+            "Escenario 6: Horas para llegar al límite de personas atendidas: 12 \n",
+            "Escenario 7: Horas para llegar al límite de personas atendidas: 11 \n",
+            "Escenario 8: Horas para llegar al límite de personas atendidas: 12 \n",
+            "Escenario 9: Horas para llegar al límite de personas atendidas: 12 \n",
+            "Escenario 10: Horas para llegar al límite de personas atendidas: 11 \n"
           ]
         }
       ],
       "source": [
         "import numpy as np\n",
         "\n",
-        "def generar_escenarios_poisson(lam, n):\n",
+        "def generar_escenarios_poisson(cliente, n):\n",
         "    escenarios = []\n",
         "    for _ in range(n):\n",
-        "        num_personas = np.random.poisson(lam, size=4).sum()\n",
+        "        num_personas = np.random.poisson(cliente, size=4).sum()\n",
         "        escenarios.append(num_personas)\n",
         "    return escenarios\n",
         "\n",
-        "def horas_para_limite(lam, limite):\n",
-        "    horas = 0\n",
-        "    num_personas = 0\n",
-        "    while num_personas <= limite:\n",
-        "        num_personas += np.random.poisson(lam)\n",
-        "        horas += 1\n",
-        "    return horas\n",
+        "def horas_limite(cliente,limite):\n",
+        "  horas=0\n",
+        "  num_personas=0\n",
+        "  while num_personas<=limite:\n",
+        "    num_personas+=np.random.poisson(cliente)\n",
+        "    horas+=1\n",
+        "  return horas\n",
         "\n",
-        "# Escenario 1: Número de personas llegadas en 4 horas\n",
-        "lam = 50  # Promedio de clientes por hora\n",
-        "num_personas_4_horas = np.random.poisson(lam, size=4).sum()\n",
-        "print(\"1. Número de personas llegadas en 4 horas:\", num_personas_4_horas)\n",
-        "\n",
-        "# Escenario 2: Horas para llegar al límite de personas atendidas\n",
-        "limite_personas = 570\n",
-        "horas_limite = horas_para_limite(lam, limite_personas)\n",
-        "print(\"2. Horas para llegar al límite de personas atendidas:\", horas_limite)\n",
-        "\n",
-        "# Generar 10 escenarios posibles\n",
-        "escenarios = generar_escenarios_poisson(lam, 10)\n",
+        "cliente=50\n",
+        "escenarios = generar_escenarios_poisson(cliente, 10)\n",
+        "print(\"Pregunta 1 : ¿Cuántas personas llegaran a lo largo de cuatro horas?\")\n",
         "print(\"\\n10 Escenarios posibles:\")\n",
-        "for i, escenario in enumerate(escenarios):\n",
-        "    print(f\"Escenario {i+1}: Número de personas en 4 horas:\", escenario)\n",
-        "\n"
+        "for i,escenario in enumerate(escenarios):\n",
+        "  print(f\"Escenario {i+1} : Numero de personas llegadas en 4 horas es {escenario}\")\n",
+        "\n",
+        "\n",
+        "print(\"\\nPregunta 2: ¿Si el máximo de personas que puede atender en un día en el banco es de 570 personas\")\n",
+        "print(\"cuantas horas habrán pasado hasta llegar a su límite?\")\n",
+        "\n",
+        "limite_personas=570\n",
+        "for i in range(10):\n",
+        "  horas_limite_=horas_limite(cliente,limite_personas)\n",
+        "  print(f\"Escenario {i+1}: Horas para llegar al límite de personas atendidas: {horas_limite_} \")\n"
       ]
     },
     {
